--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 ## 演示效果
 
 ### 图片识别功能
-![图片响应演示](./public/图片响应.gif)
+![图片响应演示](./public/image-demo.gif)
 
 ### 文字对话功能
-![文字响应演示](./public/文字响应.gif)
+![文字响应演示](./public/text-demo.gif)
