--- a/readme
+++ b/readme
@@ -4,4 +4,4 @@
 ![图片响应演示](https://github.com/123danxi/Multimodal-garbage-classification-WeChat-mini-program/blob/main/public/image-demo.gif)
 
 ### 文字对话功能
-![文字响应演示](./public/text-demo.gif)
+![文字响应演示](https://github.com/123danxi/Multimodal-garbage-classification-WeChat-mini-program/blob/main/public/text-demo.gif)
