--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 ## 演示效果
 
 ### 图片识别功能
-![图片响应演示](https://github.com/123danxi/Multimodal-garbage-classification-WeChat-mini-program/blob/main/public/image-demo.gif)
-
+![图片响应演示](https://github.com/123danxi/Multimodal-garbage-classification-WeChat-mini-program/blob/main/public/image-demo.mp4)
+https://github.com/123danxi/Multimodal-garbage-classification-WeChat-mini-program/blob/main/public/image-demo.mp4
 ### 文字对话功能
 ![文字响应演示](https://github.com/123danxi/Multimodal-garbage-classification-WeChat-mini-program/blob/main/public/text-demo.gif)
