--- a/readme
+++ b/readme
@@ -1,7 +1,4 @@
-## 演示效果
-
-### 图片识别功能
-![图片响应演示](https://github.com/123danxi/Multimodal-garbage-classification-WeChat-mini-program/blob/main/public/image-demo.mp4)
-https://github.com/123danxi/Multimodal-garbage-classification-WeChat-mini-program/blob/main/public/image-demo.mp4
-### 文字对话功能
-![文字响应演示](https://github.com/123danxi/Multimodal-garbage-classification-WeChat-mini-program/blob/main/public/text-demo.gif)
+文字响应演示
+https://github.com/user-attachments/assets/7465ad87-f292-4550-8748-5b77f36ac14e
+图片响应演示
+https://github.com/user-attachments/assets/4fbb3f3e-444d-45e5-9641-9adc1d9a0022
